--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@
 # Manually managing azure-functions-worker may cause unexpected issues
 
 azure-functions
+playwright==1.51.0
+aiohttp==3.11.16
+beautifulsoup4==4.13.4
+lxml==5.3.2
+
