--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,18 @@ playwright==1.51.0
 aiohttp==3.11.16
 beautifulsoup4==4.13.4
 lxml==5.3.2
-
+aiofiles==24.1.0
+aiosqlite==0.21.0
+colorama==0.4.6
+cssselect==1.3.0
+nltk==3.9.1
+numpy==2.2.4
+pydantic==2.11.3
+psutil==7.0.0
+python-dotenv==1.1.0
+rank-bm25==0.2.2
+requests==2.32.3
+rich==14.0.0
+snowballstemmer==2.2.0
+tf-playwright-stealth==1.1.2
+xxhash==3.5.0
