--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ rich==14.0.0
 snowballstemmer==2.2.0
 tf-playwright-stealth==1.1.2
 xxhash==3.5.0
-pyOpenSSL==25.0.0
+pyopenssl==24.1.1
 requests==2.32.3
 fake-useragent==2.2.0
 fake-http-header==0.3.5
