--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,24 @@
 azure-functions
-playwright==1.51.0
-aiohttp==3.11.16
-aiofiles==24.1.0
-aiosqlite==0.21.0
-beautifulsoup4==4.13.4
-colorama==0.4.6
-cssselect==1.3.0
-fake-http-header==0.3.5
-fake-useragent==2.2.0
-faust-cchardet==2.1.19
-httpx==0.28.1
-lxml==5.3.2
-nltk==3.9.1
-numpy==2.2.4
-packaging==24.2
-pyopenssl==24.1.1
-pydantic==2.11.3
-psutil==7.0.0
-python-dotenv==1.1.0
-rank-bm25==0.2.2
-requests==2.32.3
-rich==14.0.0
-snowballstemmer==2.2.0
-tf-playwright-stealth==1.1.2
-xxhash==3.5.0
+crawl4ai==0.5.0.post8
+aiofiles>=24.1.0
+aiosqlite~=0.20
+beautifulsoup4~=4.12
+colorama~=0.4
+cssselect>=1.2.0
+faust-cchardet>=2.1.19
+litellm>=1.53.1
+lxml~=5.3
+nltk>=3.9.1
+numpy>=1.26.0,<3
+pillow~=10.4
+playwright>=1.49.0
+psutil>=6.1.1
+pyOpenSSL>=24.3.0
+pydantic>=2.10
+python-dotenv~=1.0
+rank-bm25~=0.2
+requests~=2.26
+rich>=13.9.4
+snowballstemmer~=2.2
+tf-playwright-stealth>=1.1.0
+xxhash~=3.4
